--- a/src/window.ui
+++ b/src/window.ui
@@ -4,8 +4,9 @@
   <requires lib="Adw" version="1.0"/>
   <template class="DotfilesCalendarWindow" parent="AdwApplicationWindow">
     <property name="title" translatable="yes">Calendar</property>
-    <property name="default-width">800</property>
-    <property name="default-height">600</property>
+    <property name="default-width">400</property>
+    <property name="default-height">460</property>
+    <property name="resizable">false</property>
     <property name="content">
       <object class="AdwToolbarView">
        <child type="top">
