--- a/src/settings.ui
+++ b/src/settings.ui
@@ -2,10 +2,7 @@
 <interface>
   <requires lib="gtk" version="4.0"/>
   <requires lib="Adw" version="1.0"/>
-  <template class="DotfilesCalendarSettings" parent="AdwPreferencesWindow">
-    <property name="default-width">400</property>
-    <property name="default-height">320</property>
-    <property name="resizable">false</property>
+  <template class="DotfilesCalendarSettings" parent="AdwPreferencesDialog">
     <property name="title">Preferences</property>
 
     <child>
